CHANGES-1.4.txt
---------------

CHANGES IN CUPS V1.4.7

	- Documentation changes (STR #3710, STR #3720, STR #3745, STR #3750,
	  STR #3757, STR #3758, STR #3782, STR #3826, STR #3829)
	- Web interface fixes (STR #3412, STR #3345, STR #3455, STR #3707,
	  STR #3755, STR #3769, STR #3783)
	- Configure script fixes (STR #3659, STR #3691)
	- Compilation fixes (STR #3718, STR #3771, STR #3774)
	- CUPS did not work with locales using the ASCII character set
	  (STR #3832)
	- httpAddrString() did not return a URI-style IPv6 numeric address
	  (STR #3814)
	- Fixed an issue when reading compressed CUPS raster streams (STR #3812)
	- Fixed an issue with PostScript printer auto-configuration (STR #3443)
	- Fixed some compatibility issues with the libusb-based USB backend
	  (STR #3799)
	- The network backends no longer try to collect SNMP supply and status
	  information for raw queues (STR #3809)
	- The DBUS notifier did not report job state changes (STR #3805)
	- The scheduler did not always report that the "normal" print-quality
	  value was supported (STR #3803)
	- The gziptoany filter did not report the correct error if it was unable
	  to write the uncompressed document to the next filter or backend in
	  the chain (STR #3797)
	- The Epson and Oki 9-pin drivers had a bad resolution option
	  (STR #3798)
	- The scheduler did not always register the correct default ICC profile
	  on Mac OS X.
	- The scheduler did not use the job owner when authorizing access for
	  the CUPS-Get-Document operation, preventing non-admins from accessing
	  their own jobs.
	- CUPS did not work with some printers that incorrectly implemented the
	  HTTP/1.1 standard (STR #3778, STR #3791)
	- The scheduler did not retry fax jobs properly.
	- The scheduler now recognizes an empty cupsCommands PPD keyword as
	  meaning that CUPS commands are not supported for a printer (STR #3773)
	- Fixed a crash bug in the scheduler when the application/octet-stream
	  MIME type was not defined (STR #3690)